# qapp

./: .gitignore  AGENTS.md  CLAUDE.md  live_qmt_ema_cross.py  pyproject.toml  restart_qapp.sh
.plans/: mysql-reconnect-keepalive.md  sync-trade-calendar.md
backtests/: __init__.py  base.py  common.py  qmt_ema_cross_clickhouse.py  reporting.py
backtests/data_providers/: __init__.py  base.py  clickhouse.py  clickhouse_model_predictions.py  model_base.py
backtests/macd_smoke/: __init__.py  run_backtest.py
backtests/model_predictions/: __init__.py  run_backtest.py
backtests/result_writers/: __init__.py  live_records.py  live_writer.py  mysql.py  records.py  writer.py
backtests/target_model_predictions/: __init__.py  run_backtest.py
lives/: __init__.py  live_common.py  live_qmt_model_predictions.py  live_qmt_target_model_predictions.py  live_reconciliation.py  monitoring.py  sell_all_sellable.py  snapshot_recorder.py  status_server.py
monitoring/: README.md  __init__.py  dingtalk_alert.py
scripts/: full_tick_ods_to_dwd.sql  full_tick_snapshot_to_clickhouse.py  sync_trade_calendar.py
strategies/: emac_cross.py  macd_smoke.py  model_common.py  model_prediction_targets.py  model_predictions.py  target_quantities.py  target_weights.py
strategies/model_target_planners/: __init__.py  base.py  equal_weight.py  factory.py  risk_manager.py
strategies/order_splitter/: __init__.py  notional_order_splitter.py
strategies/pricing/: __init__.py  base.py  context.py  open_offset.py
tests/: __init__.py  test_live_common_full_tick.py  test_model_prediction_targets.py  test_model_target_planners.py  test_pricing.py  test_target_live_config.py  test_target_quantities.py  test_target_weights.py
